--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "^17.0.2",
     "react-canvas-draw": "^1.1.1",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "4.0.3",
+    "react-virtualized": "^9.22.3",
+    "react-window": "^1.8.6",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -43,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-window": "^1.8.5"
   }
 }
