nice design fixup

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
+    "start": "react-scripts start --inspect",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
