--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "customize-cra": "^1.0.0",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "4.0.3",
@@ -26,7 +28,8 @@
     "start": "react-scripts start --inspect",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "startprod" : "npm run build && serve -s build"
   },
   "eslintConfig": {
     "extends": [
