--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.0-rc.0",
-    "@mui/lab": "^5.0.0-alpha.45",
-    "@mui/material": "^5.0.0-rc.0",
+    "@mui/icons-material": "^5.0.0",
+    "@mui/material": "^5.0.0",
     "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
+    "@types/node": "^12.20.25",
+    "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.0",
     "customize-cra": "^1.0.0",
     "react": "^17.0.2",
@@ -19,17 +18,17 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "4.0.3",
     "source-map-explorer": "^2.5.2",
-    "typescript": "^4.1.2",
+    "typescript": "^4.4.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "analyze": "npm run build && source-map-explorer 'build/static/js/*.js'",
-  "deploysite": "npm run build && firebase deploy --only hosting",
+    "deploysite": "npm run build && firebase deploy --only hosting",
     "start": "react-scripts start --inspect",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "startprod" : "npm run build && serve -s build"
+    "startprod": "npm run build && serve -s build"
   },
   "eslintConfig": {
     "extends": [
