--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.0",
     "customize-cra": "^1.0.0",
+    "pako": "^2.0.4",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
@@ -52,6 +53,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/pako": "^1.0.2",
     "@types/react-window": "^1.8.5",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0"
