--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.4.3",
     "web-vitals": "^1.0.1"
