--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
     "source-map-explorer": "^2.5.2",
-    "typescript": "^4.4.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -30,12 +29,7 @@
     "eject": "react-scripts eject",
     "startprod": "npm run build && serve -s build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
+  "eslintConfig": ".eslintrc.json",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -54,6 +48,10 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/pako": "^1.0.2",
     "@types/react-window": "^1.8.5",
+    "@typescript-eslint/eslint-plugin": "^4.31.2",
+    "@typescript-eslint/parser": "^4.31.2",
+    "eslint": "^7.32.0",
+    "typescript": "^4.4.3",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0"
   }
