--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
       "rules": {
         "@typescript-eslint/explicit-module-boundary-types": "off",
         "@typescript-eslint/no-non-null-assertion" : "off",
-        "@typescript-eslint/restrict-plus-operands" : "off"
+        "@typescript-eslint/restrict-plus-operands" : "off",
+        "@typescript-eslint/no-namespace": "off"
       }
     }
   ]
