--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   "scripts": {
     "analyze": "npm run build && source-map-explorer 'build/static/js/*.js'",
     "deploysite": "npm run build && firebase deploy --only hosting",
-    "start": "react-scripts start --inspect",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start --inspect",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "startprod": "npm run build && serve -s build"
   },
@@ -50,7 +50,9 @@
     "@types/react-window": "^1.8.5",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
+    "customize-cra": "^1.0.0",
     "eslint": "^7.32.0",
+    "react-app-rewired": "^2.1.8",
     "typescript": "^4.4.3",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0"
