commit before delet everything

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,7 +56,10 @@
         "@typescript-eslint/no-non-null-assertion" : "off",
         "@typescript-eslint/restrict-plus-operands" : "off",
         "@typescript-eslint/no-namespace": "off",
-        "eqeqeq": "off"
+        "eqeqeq": "off",
+        "@typescript-eslint/no-unsafe-assignment": "off",
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-unused-vars": "off"
       }
     }
   ]
