--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -59,7 +59,12 @@
         "eqeqeq": "off",
         "@typescript-eslint/no-unsafe-assignment": "off",
         "@typescript-eslint/no-empty-function": "off",
-        "@typescript-eslint/no-unused-vars": "off"
+        "@typescript-eslint/no-unused-vars": "off",
+        "@typescript-eslint/no-unsafe-member-access": "off",
+        "@typescript-eslint/restrict-template-expressions": "off",
+        "react/jsx-no-undef": "off",
+        "@typescript-eslint/no-unsafe-call": "off",
+        "@typescript-eslint/ban-ts-comment" : "off"
       }
     }
   ]
