--- a/firebase.json
+++ b/firebase.json
@@ -10,7 +10,7 @@
     ]
   },
   "hosting": {
-    "public": "public",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
@@ -21,6 +21,9 @@
         "source": "**",
         "destination": "/index.html"
       }
+    ],
+    "headers": [
+      {"source": "/service-worker.js", "headers": [{"key": "Cache-Control", "value": "no-cache"}]}
     ]
   },
   "emulators": {
