--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,7 @@
     "default-param-last": "warn",
     "no-constructor-return": "error",
     "no-eval": "error",
-    "no-extend-native": "error",
+    "no-extend-native": "off",
     "no-extra-bind": "warn",
     "no-extra-label": "warn",
     "no-implicit-coercion": "error",
