--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.0",
     "crash-parser": "file:crash-parser",
+    "fflate": "^0.7.3",
     "pako": "^2.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
