--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "lib/functions/src/index.js",
   "dependencies": {
+    "axios": "^0.26.0",
     "firebase-admin": "^9.8.0",
     "firebase-functions": "^3.14.1"
   },
