--- a/functions/package.json
+++ b/functions/package.json
@@ -26,7 +26,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.0",
     "firebase-functions-test": "^0.2.0",
-    "typescript": "^3.9.10"
+    "typescript": "^4.6.1-rc"
   },
   "private": true
 }
