try to remake from scratch

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -8,6 +8,13 @@
     "strict": true,
     "target": "es2017"
   },
+  "references": [
+    {
+      "path": "../crash-parser",
+      // add 'prepend' if you want to include the referenced project in your output file
+      "prepend": false,
+    }
+  ],
   "compileOnSave": true,
   "include": [
     "src"
