--- a/crash-parser/package.json
+++ b/crash-parser/package.json
@@ -8,10 +8,12 @@
     "@types/jest": "^27.0.2",
     "babel-jest": "^27.2.2",
     "jest": "^27.2.2",
-    "ts-node": "^10.2.1"
+    "ts-node": "^10.2.1",
+    "typescript": "^4.6.1-rc"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "tsc --p ../crash-parser"
   },
   "private": true
 }
