--- a/crash-parser/tsconfig.json
+++ b/crash-parser/tsconfig.json
@@ -20,11 +20,16 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "noEmit": false,
+    "jsx": "react-jsx",
+    "declaration": true,
+    "declarationMap": true,
+    "rootDir": ".",
+    "composite": true
   },
   "compileOnSave": true,
   "include": [
     "src"
-  ]
+  ],
+  "references": []  // * Any project that is referenced must itself have a `references` array (which may be empty).
 }
