--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "extends": "../tsconfig-base.json",
   "compilerOptions": {
-    "outDir": "../lib/common",
-    "rootDir": "."
+    "outDir": "build"
   }
 }
