--- a/functions/package.json
+++ b/functions/package.json
@@ -13,20 +13,17 @@
   "engines": {
     "node": "16"
   },
-  "main": "lib/functions/src/index.js",
+  "main": "lib/index.js",
   "dependencies": {
     "axios": "^0.26.0",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0"
+    "firebase-functions": "^3.18.0",
+    "crashy-common": "1.0.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.8.0",
-    "eslint": "^7.6.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.22.0",
-    "firebase-functions-test": "^0.2.0",
-    "typescript": "^4.6.1-rc"
+    "eslint-config-crashy": "1.0.3",
+    "firebase-functions-test": "^0.3.3",
+    "typescript": "^4.6.2"
   },
   "private": true
 }
