--- a/eslint-config-crashy/package.json
+++ b/eslint-config-crashy/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "eslint-config-crashy",
+  "name": "eslint-config-fudge-commons",
   "main": "index.js",
-  "version": "1.0.3",
+  "version": "1.0.1",
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
     "eslint": "^8.10.0",
     "eslint-plugin-import": "^2.25.4"
   },
