--- a/fudge-commons/tsconfig.json
+++ b/fudge-commons/tsconfig.json
@@ -1,9 +1,11 @@
 {
+  "include": ["src"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
     "declaration": true,
-    "target": "es5",
+    "target": "es6",
     "noImplicitReturns": true,
-    "rootDir": ".",
+    "rootDir": "src/",
     "outDir": "lib",
     "lib": [
       "dom",
@@ -21,7 +23,6 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
+    "isolatedModules": true
   }
 }
