--- a/fudge-commons/package.json
+++ b/fudge-commons/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fudge-commons",
-  "version": "1.0.6",
+  "version": "1.0.11",
   "devDependencies": {
     "@types/jest": "^27.4.1",
     "eslint-config-fudge-commons": "1.0.3",
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "tsc -b",
     "lint": "eslint --ext .js,.ts .",
-    "fullpublish": "npm run build && npm version patch && npm publish"
+    "fullpublish": "npm run build && npm version patch && copy \"package.json\" \"lib\\package.json\" && cd lib && npm publish"
   },
   "dependencies": {
     "fflate": "^0.7.3"
@@ -20,8 +20,5 @@
     "@types/react": "^17.0.22",
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2"
-  },
-  "files": [
-    "lib/**/*"
-  ]
+  }
 }
