--- a/package.json
+++ b/package.json
@@ -3,31 +3,33 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.0",
-    "@mui/material": "^5.0.0",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.20.25",
-    "@types/react": "^17.0.22",
-    "@types/react-dom": "^17.0.0",
-    "fudge-commons": "1.0.6",
-    "fflate": "^0.7.3",
-    "pako": "^2.0.4",
+    "@types/node": "^17.0.21",
+
     "react": "^17.0.2",
+    "@types/react": "^17.0.40",
     "react-dom": "^17.0.2",
+    "@types/react-dom": "^17.0.13",
+    "react-scripts": "5.0.0",
+    "web-vitals": "^2.1.4",
+
+    "@mui/material": "^5.5.0",
+    "@mui/icons-material": "^5.5.0",
+    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.8.2",
+
+    "fudge-commons": "^1.0.11",
+    "fflate": "^0.7.3",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-scripts": "4.0.3",
-    "react-transition-group": "^4.4.2",
-    "source-map-explorer": "^2.5.2",
-    "web-vitals": "^1.0.1"
+
+    "@types/jest": "^27.4.1",
+    "source-map-explorer": "^2.5.2"
   },
   "scripts": {
     "analyze": "npm run build && source-map-explorer 'build/static/js/*.js'",
     "deploysite": "npm run build && firebase deploy --only hosting",
-    "start": "craco start --inspect",
-    "build": "craco build",
-    "test": "craco test",
+    "start": "react-scripts start --inspect",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
     "startprod": "npm run build && serve -s build",
     "profileprod": "npm run build -- --profile && serve -s build"
@@ -46,18 +48,15 @@
     ]
   },
   "devDependencies": {
-    "@craco/craco": "^6.4.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/pako": "^1.0.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/pako": "^1.0.3",
     "@types/react-window": "^1.8.5",
-    "craco-esbuild": "^0.4.2",
-    "customize-cra": "^1.0.0",
-    "eslint": "^7.32.0",
-    "react-app-rewired": "^2.1.8",
-    "typescript": "^4.6.1-rc",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^4.8.0"
+    "eslint": "^8.11.0",
+    "typescript": "^4.6.2",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.2",
+    "eslint-config-fudge-commons": "^1.0.3"
   }
 }
