--- a/client/package.json
+++ b/client/package.json
@@ -3,24 +3,23 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@types/node": "^18.7.18",
-
-    "react": "^18.2.0",
-    "@types/react": "^18.0.20",
-    "react-dom": "^18.2.0",
-    "@types/react-dom": "^18.0.6",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^3.0.2",
-
-    "@mui/material": "^5.10.5",
-    "@mui/icons-material": "^5.10.3",
-    "@emotion/styled": "^11.10.4",
     "@emotion/react": "^11.10.4",
-    "fflate": "^0.7.3",
-    "react-infinite-scroll-component": "^6.1.0",
-
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/lab": "^5.0.0-alpha.100",
+    "@mui/material": "^5.10.5",
     "@types/jest": "^29.0.3",
-    "source-map-explorer": "^2.5.2"
+    "@types/node": "^18.7.18",
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
+    "dayjs": "^1.11.5",
+    "fflate": "^0.7.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-scripts": "5.0.1",
+    "source-map-explorer": "^2.5.2",
+    "web-vitals": "^3.0.2"
   },
   "scripts": {
     "analyze": "npm run build && source-map-explorer 'build/static/js/*.js'",
@@ -54,7 +53,6 @@
     "eslint": "^8.23.1",
     "typescript": "^4.8.3",
     "webpack-bundle-analyzer": "^4.6.1",
-    "webpack-cli": "^4.10.0",
-    "eslint-config-fudge-commons": "^1.0.6"
+    "webpack-cli": "^4.10.0"
   }
 }
