--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "analyze": "npm run build && source-map-explorer 'build/static/js/*.js'",
     "deploysite": "npm run build && firebase deploy --only hosting",
     "start": "react-scripts start --inspect",
-    "build": "react-scripts build",
+    "build": "react-scripts build && compress-cra",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "startprod": "npm run build && serve -s build",
@@ -53,6 +53,7 @@
     "eslint": "^8.23.1",
     "typescript": "^4.8.3",
     "webpack-bundle-analyzer": "^4.6.1",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "compress-create-react-app": "^1.2.1"
   }
 }
