complete testing and finalization of CrashlogCache

--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -1,2 +1,3 @@
 kotlin.code.style=official
 ec2_domain=ec2-35-157-64-36.eu-central-1.compute.amazonaws.com
+org.gradle.unsafe.configuration-cache=true
