--- a/server/gradle/libs.versions.toml
+++ b/server/gradle/libs.versions.toml
@@ -19,7 +19,7 @@ gradle-node = {id = "com.github.node-gradle.node", version.ref = "gradle-node"}
 
 [versions]
 
-ktor = "2.1.3"
+ktor = "2.2.0-eap-534"
 kotlin = "1.7.20"
 logback = "1.4.4"
 reflections = "0.10.2"
