--- a/server/gradle/libs.versions.toml
+++ b/server/gradle/libs.versions.toml
@@ -5,7 +5,7 @@
 main = [
     "ktor-core", "ktor-caching-headers", "ktor-compression", "ktor-default-headers", "ktor-call-logging",
     "ktor-server-serialization", "kotlinx-serialization-json", "ktor-server-content-negotiation",
-    "ktor-netty", "logback", "reflections", "s3", "ktor-server-resources",
+    "ktor-netty", "logback", "reflections", "s3", "ktor-server-resources", "dropwizard-jmx", "ktor-server-metrics"
 ]
 test = ["ktor-tests", "kotlin-test-junit", "strikt", "okhttp"]
 
@@ -30,7 +30,7 @@ aws = "0.17.9-beta"
 strikt = "0.34.1"
 kotlin-serialization = "1.4.1"
 okhttp = "5.0.0-alpha.10"
-
+dropwizard = "4.2.9"
 [libraries]
 
 ktor-core = { group = "io.ktor", name = "ktor-server-core-jvm", version.ref = "ktor" }
@@ -48,5 +48,7 @@ strikt = {group = "io.strikt", name = "strikt-core", version.ref= "strikt"}
 ktor-server-resources = {group = "io.ktor", name = "ktor-server-resources", version.ref= "ktor"}
 ktor-server-serialization = {group = "io.ktor", name = "ktor-serialization-kotlinx-json", version.ref= "ktor"}
 ktor-server-content-negotiation = {group = "io.ktor", name = "ktor-server-content-negotiation", version.ref= "ktor"}
+ktor-server-metrics = {group = "io.ktor", name = "ktor-server-metrics", version.ref = "ktor"}
+dropwizard-jmx = {group = "io.dropwizard.metrics", name = "metrics-jmx", version.ref = "dropwizard"}
 kotlinx-serialization-json = {group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref= "kotlin-serialization"}
 okhttp = {group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp"}
