--- a/server/gradle/libs.versions.toml
+++ b/server/gradle/libs.versions.toml
@@ -20,20 +20,20 @@ gradle-node = {id = "com.github.node-gradle.node", version.ref = "gradle-node"}
 
 [versions]
 
-ktor = "2.2.0-eap-534"
-kotlin = "1.7.21"
+ktor = "2.2.1"
+kotlin = "1.8.0"
 logback = "1.4.5"
 reflections = "0.10.2"
 shadow = "7.1.2"
 test-logger = "3.2.0"
-gradle-node = "3.5.0"
-aws = "0.18.0-beta"
+gradle-node = "3.5.1"
+aws = "0.19.2-beta"
 strikt = "0.34.1"
 kotlin-serialization = "1.4.1"
-okhttp = "5.0.0-alpha.10"
-dropwizard = "4.2.13"
+okhttp = "5.0.0-alpha.11"
+dropwizard = "4.2.15"
 caffeine = "3.1.2"
-brotli = "1.8.0"
+brotli = "1.9.0"
 
 [libraries]
 
