fix bad date parsing

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,4 @@ lib/
 .gradle/
 aws/generated
 build/
-server/src/main/resources/keystore.jks
-server/src/main/resources/fake_keystore_password.txt
-server/src/main/resources/letsencrypt_keystore_password.txt
+server/src/main/resources/secrets/*
