--- a/server/gradle/libs.versions.toml
+++ b/server/gradle/libs.versions.toml
@@ -5,7 +5,9 @@
 main = [
     "ktor-core", "ktor-caching-headers", "ktor-compression", "ktor-default-headers", "ktor-call-logging",
     "ktor-server-serialization", "kotlinx-serialization-json", "ktor-server-content-negotiation",
-    "ktor-netty", "logback", "reflections", "s3", "ktor-server-resources", "dropwizard-jmx", "ktor-server-metrics",
+    "ktor-netty", "logback", "reflections",
+#    "s3",
+    "ktor-server-resources", "dropwizard-jmx", "ktor-server-metrics",
     "caffeine", "brotli"
 ]
 test = ["ktor-tests", "kotlin-test-junit", "strikt", "okhttp"]
