--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.8",
     "source-map-explorer": "^2.5.2",
     "web-vitals": "^3.0.2"
   },
@@ -50,10 +51,10 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/pako": "^2.0.0",
     "@types/react-window": "^1.8.5",
+    "compress-create-react-app": "^1.2.1",
     "eslint": "^8.23.1",
     "typescript": "^4.8.3",
     "webpack-bundle-analyzer": "^4.6.1",
-    "webpack-cli": "^4.10.0",
-    "compress-create-react-app": "^1.2.1"
+    "webpack-cli": "^4.10.0"
   }
 }
