--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -11,9 +11,11 @@
     "@typescript-eslint"
   ],
   "extends": [
-    "react-app",
-    "react-app/jest"
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking"
   ],
+  "ignorePatterns": ["vite.config.*"],
   "rules": {
     "@typescript-eslint/no-unnecessary-boolean-literal-compare": "warn",
     "@typescript-eslint/consistent-indexed-object-style": "warn",
@@ -41,19 +43,20 @@
     "no-sequences": "error",
     "no-throw-literal": "error",
     "no-useless-call": "warn",
-    "no-useless-concat": "warn"
+    "no-useless-concat": "warn",
+    "@typescript-eslint/strict-boolean-expressions": "error"
   },
   "overrides": [
     {
       "files": [
-        "**/*.ts?(x)"
+        "src/**/*.ts?(x)"
       ],
       "rules": {
         "@typescript-eslint/explicit-module-boundary-types": "off",
         "@typescript-eslint/no-non-null-assertion" : "off",
         "@typescript-eslint/restrict-plus-operands" : "off",
         "@typescript-eslint/no-namespace": "off",
-        "eqeqeq": "off",
+        "eqeqeq": "warn",
         "@typescript-eslint/no-unsafe-assignment": "off",
         "@typescript-eslint/no-empty-function": "off",
         "@typescript-eslint/no-unused-vars": "off",
@@ -63,7 +66,11 @@
         "@typescript-eslint/no-unsafe-call": "off",
         "@typescript-eslint/ban-ts-comment" : "off",
         "@typescript-eslint/require-await": "warn",
-        "@typescript-eslint/no-unsafe-return": "warn"
+        "@typescript-eslint/no-unsafe-return": "warn",
+        "@typescript-eslint/strict-boolean-expressions": "error",
+        "no-constant-condition": "warn",
+        "@typescript-eslint/no-inferrable-types": "warn",
+        "no-empty": "warn"
       }
     }
   ]
