--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -1,3 +1,4 @@
 kotlin.code.style=official
 ec2_domain=ec2-3-68-47-185.eu-central-1.compute.amazonaws.com
 org.gradle.unsafe.configuration-cache=true
+org.gradle.jvmargs=-Xmx4096m
