--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react-swc": "^3.1.0",
     "eslint": "^8.33.0",
     "source-map-explorer": "^2.5.3",
     "typescript": "^4.9.3",
