--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest --ui"
   },
   "eslintConfig": ".eslintrc.json",
   "dependencies": {
@@ -31,7 +32,10 @@
     "@typescript-eslint/parser": "^5.50.0",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitejs/plugin-react-swc": "^3.1.0",
+    "@vitest/ui": "^0.28.4",
     "eslint": "^8.33.0",
+    "node-fetch": "^3.3.0",
+    "rollup-plugin-ignore": "^1.0.10",
     "source-map-explorer": "^2.5.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
