--- a/client/package.json
+++ b/client/package.json
@@ -26,14 +26,12 @@
     "web-vitals": "^3.1.1"
   },
   "devDependencies": {
+    "eslint-config-standards-style" : "latest",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitejs/plugin-react-swc": "^3.1.0",
     "@vitest/ui": "^0.28.4",
-    "eslint": "^8.33.0",
     "node-fetch": "^3.3.0",
     "rollup-plugin-ignore": "^1.0.10",
     "source-map-explorer": "^2.5.3",
