--- a/client/fudge-lib/package.json
+++ b/client/fudge-lib/package.json
@@ -1,30 +1,14 @@
 {
-  "name": "crashy",
-  "private": true,
+  "name": "fudge-lib",
+  "private": false,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
     "test": "vitest --ui"
   },
   "eslintConfig": ".eslintrc.json",
   "dependencies": {
-    "fudge-lib" : "latest",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/lab": "^5.0.0-alpha.118",
-    "@mui/material": "^5.11.7",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.20",
-    "@types/react-dom": "^18.0.10",
-    "dayjs": "^1.11.7",
-    "fflate": "^0.7.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "web-vitals": "^3.1.1"
   },
   "devDependencies": {
     "eslint-config-standards-style" : "latest",
