--- a/client/fudge-lib/package.json
+++ b/client/fudge-lib/package.json
@@ -1,17 +1,18 @@
 {
   "name": "fudge-lib",
   "private": false,
-  "version": "1.0.0",
+  "version": "1.0.10",
   "type": "module",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc && vite build",
-    "test": "vitest --ui"
+    "build": "tsc",
+    "test": "vitest --ui",
+    "upload": "npm version patch & npm publish"
   },
   "eslintConfig": ".eslintrc.json",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "eslint-config-standards-style" : "latest",
+    "eslint-config-standards-style": "latest",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
@@ -23,5 +24,8 @@
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vitest": "^0.28.4"
-  }
+  },
+  "files": [
+    "dist/**/**"
+  ]
 }
