--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest --ui"
+    "test": "vitest --ui",
+    "update-lib": "npm update fudge-lib"
   },
   "eslintConfig": ".eslintrc.json",
   "dependencies": {
