--- a/server/gradle/libs.versions.toml
+++ b/server/gradle/libs.versions.toml
@@ -21,22 +21,22 @@ gradle-node = {id = "com.github.node-gradle.node", version.ref = "gradle-node"}
 
 [versions]
 
-ktor = "2.2.3"
-kotlin = "1.8.10"
-logback = "1.4.5"
+ktor = "2.3.0"
+kotlin = "1.8.21"
+logback = "1.4.7"
 reflections = "0.10.2"
-shadow = "7.1.2"
+shadow = "8.1.1"
 test-logger = "3.2.0"
-gradle-node = "3.5.1"
+gradle-node = "5.0.0"
 aws = "0.19.4-beta"
 strikt = "0.34.1"
-kotlin-serialization = "1.5.0-RC"
+kotlin-serialization = "1.5.1"
 okhttp = "5.0.0-alpha.11"
-dropwizard = "4.2.15"
-caffeine = "3.1.2"
-brotli = "1.9.0"
+dropwizard = "4.2.18"
+caffeine = "3.1.6"
+brotli = "1.11.0"
 jansi = "2.4.0"
-s3 = "2.19.31"
+s3 = "2.20.66"
 firebase-admin = "9.1.1"
 ssh = "3.0.10"
 
