--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest --ui",
-    "update-lib": "npm update fudge-lib"
+    "test": "vitest --ui"
   },
   "eslintConfig": ".eslintrc.json",
   "dependencies": {
@@ -18,19 +17,16 @@
     "@mui/lab": "^5.0.0-alpha.118",
     "@mui/material": "^5.11.7",
     "@types/node": "^18.11.18",
-    "@types/react": "^18.0.20",
-    "@types/react-dom": "^18.0.10",
     "dayjs": "^1.11.7",
     "fflate": "^0.7.4",
-    "fudge-lib": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-infinite-scroll-component": "^6.1.0",
     "web-vitals": "^3.1.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^3.1.0",
     "@vitejs/plugin-react-swc": "^3.1.0",
     "@vitest/ui": "^0.28.4",
