--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "fflate": "^0.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
     "react-infinite-scroll-component": "^6.1.0",
     "web-vitals": "^3.1.1"
   },
